--- a/index.html
+++ b/index.html
@@ -43,24 +43,21 @@
                 <img src="feature-image-1.png" alt="官能的な香り">
                 <div class="feature-text">
                     <h3 class="highlight-bg">官能的な香りの秘密</h3>
-                    <p>LEUMMEの香水が醸し出す官能的な香りの秘密をご紹介します。
-                    </div>厳選された希少な成分が、あなたの魅力を引き立てます。</p>
+                    <p>LEUMMEの香水が醸し出す官能的な香りの秘密をご紹介します。厳選された希少な成分が、あなたの魅力を引き立てます。</p>
                 </div>
             </div>
             <div class="feature reverse">
                 <img src="feature-image-2.jpg" alt="長続きする香り">
                 <div class="feature-text">
                     <h3 class="highlight-bg">長続きする香りのメカニズム</h3>
-                    <p>特殊な製法により、香りが長時間持続します。
-                    </div>朝つけた香りが夜まで優雅に漂い続けます。</p>
+                    <p>特殊な製法により、香りが長時間持続します。朝つけた香りが夜まで優雅に漂い続けます。</p>
                 </div>
             </div>
             <div class="feature">
                 <img src="feature-image-3.jpg" alt="肌に優しい処方">
                 <div class="feature-text">
                     <h3 class="highlight-bg">肌に優しい特別処方</h3>
-                    <p>敏感肌の方でも安心してお使いいただける、肌に優しい処方を採用しています。
-                    </div>香りを楽しみながら、肌も大切にできます。</p>
+                    <p>敏感肌の方でも安心してお使いいただける、肌に優しい処方を採用しています。香りを楽しみながら、肌も大切にできます。</p>
                 </div>
             </div>
         </section>
